--- a/reasoning.ipynb
+++ b/reasoning.ipynb
@@ -603,7 +603,278 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/70 [00:00<?, ?it/s]"
+      "  6%|▌         | 4/70 [00:25<07:03,  6.42s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 4 examples for up to 1 rounds, amounting to 4 attempts.\n",
+      "Bootstrapping set 7/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 5/70 [00:24<05:21,  4.95s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 5 examples for up to 1 rounds, amounting to 5 attempts.\n",
+      "Bootstrapping set 8/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/70 [00:03<04:18,  3.75s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 9/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 2/70 [00:15<08:42,  7.69s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 2 full traces after 2 examples for up to 1 rounds, amounting to 2 attempts.\n",
+      "Bootstrapping set 10/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▌         | 4/70 [00:28<07:54,  7.19s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 4 examples for up to 1 rounds, amounting to 4 attempts.\n",
+      "Bootstrapping set 11/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/70 [00:04<05:17,  4.60s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 12/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  4%|▍         | 3/70 [00:17<06:25,  5.75s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 2 full traces after 3 examples for up to 1 rounds, amounting to 3 attempts.\n",
+      "Bootstrapping set 13/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/70 [00:08<09:35,  8.34s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 14/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 5/70 [00:26<05:46,  5.33s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 5 examples for up to 1 rounds, amounting to 5 attempts.\n",
+      "Bootstrapping set 15/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/70 [00:04<05:28,  4.76s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 16/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 2/70 [00:08<04:43,  4.18s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 2 full traces after 2 examples for up to 1 rounds, amounting to 2 attempts.\n",
+      "Bootstrapping set 17/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/70 [00:10<11:34, 10.07s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 18/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/70 [00:07<09:10,  7.98s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 19/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 2/70 [00:20<11:51, 10.47s/it]\n",
+      "2025/03/13 12:54:23 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "==> STEP 2: PROPOSE INSTRUCTION CANDIDATES <==\n",
+      "2025/03/13 12:54:23 INFO dspy.teleprompt.mipro_optimizer_v2: We will use the few-shot examples from the previous step, a generated dataset summary, a summary of the program code, and a randomly selected prompting tip to propose instructions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 2 examples for up to 1 rounds, amounting to 2 attempts.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 12:54:50 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "Proposing instructions...\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: Proposed Instructions for Predictor 0:\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 0: Given the fields `question`, produce the fields `answer`.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 1: You are a mathematics tutor. Given the field `question`, provide a detailed step-by-step reasoning that leads to the final `answer`. Ensure that your reasoning is clear and educational, guiding the user through the problem-solving process.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 2: Analyze the provided `question` and generate a detailed `reasoning` process that explains how to arrive at the `answer`. Ensure that the reasoning is structured step-by-step, demonstrating the logical deductions made throughout the problem-solving process. Finally, provide the final `answer` based on the reasoning.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 3: You are a mathematics tutor. Given the question provided, analyze the mathematical concepts involved and produce a detailed step-by-step reasoning process along with the final answer.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 4: Using the provided `question`, systematically analyze the problem and generate a detailed `reasoning` process that leads to the final `answer`. Ensure that each step is clearly articulated and logically follows from the previous one, ultimately culminating in a succinct conclusion that resolves the question posed.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 5: Given the mathematical `question`, provide a detailed `reasoning` process step-by-step, followed by the final `answer` to the problem.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 6: In a high-stakes mathematical competition, you are presented with a challenging problem that requires not only the correct answer but also a comprehensive explanation of your reasoning process. Given the mathematical `question`, your task is to carefully analyze the problem, break it down into logical steps, and provide both a detailed `reasoning` and the final `answer`. Ensure that your explanation is clear and methodical, allowing anyone reviewing your solution to understand how you arrived at the conclusion.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 7: Given a mathematical question, provide a detailed reasoning process that breaks down the solution step-by-step, applying relevant mathematical principles and formulas. Finally, present the correct answer to the question in a clear and concise manner.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 8: Using the provided `question`, generate a detailed response that includes both the `reasoning` behind the solution and the final `answer`. Ensure that the explanation is clear and structured, guiding the user through each step of the mathematical process.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 9: Using the input field `question`, please generate a detailed reasoning process that systematically addresses the mathematical problem presented. Ensure that the reasoning articulates each step taken to arrive at the solution, culminating in a clear and concise final answer in the `answer` field. The output should not only provide the answer but also enhance understanding by explaining the logic and calculations involved in the problem-solving process.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 10: Imagine you are a mathematician tasked with solving critical real-world problems for a major corporation. Your job is to analyze complex mathematical questions and provide clear, step-by-step reasoning along with precise answers. Given the following mathematical question, produce a detailed reasoning process and the final answer. \n",
+      "\n",
+      "Question: {question}\n",
+      "\n",
+      "Ensure that your reasoning is thorough, demonstrating how you arrived at the answer.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 11: Imagine you are a mathematician tasked with solving complex real-world problems that require deep reasoning and careful analysis. Your goal is to take the given mathematical question and provide a thorough, step-by-step explanation of your thought process, ultimately leading to a clear and concise answer. Given the question, produce a detailed reasoning output followed by the final answer.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 12: Given the mathematical question provided, analyze it step by step to formulate a logical reasoning process and derive the final answer. Clearly outline the thought process, calculations, and any relevant mathematical principles used in arriving at the solution.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 13: Imagine you are a mathematician solving critical problems that could impact a major project. You have a complex mathematical question in front of you that needs to be addressed urgently. Using the `question` provided, please generate a detailed `reasoning` process that breaks down the solution step-by-step, and provide the final `answer`. Make sure to explain your thought process clearly so that others can follow your reasoning.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 14: You are a mathematics tutor. Given the field `question`, provide a detailed step-by-step `reasoning` process that leads to the final `answer`. Ensure your reasoning is clear and structured to help the learner understand each part of the solution.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 15: Given the mathematical problem stated in the `question`, provide a detailed step-by-step reasoning process and the final answer in the `answer` field.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 16: Given the mathematical problem described in the `question`, provide a detailed step-by-step reasoning process and the final answer. Ensure that the reasoning clearly explains the application of relevant mathematical principles and calculations leading to the answer.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 17: You are a mathematics tutor. Given the field `question`, carefully analyze the problem and produce the fields `reasoning` and `answer`. In the `reasoning` section, explain your thought process step by step to arrive at the final `answer`.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: 18: Using the provided `question`, break down the problem into logical steps and provide a detailed reasoning process leading to the final `answer`. Ensure that each step is clearly articulated to enhance understanding of the mathematical principles involved.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: ==> STEP 3: FINDING OPTIMAL PROMPT PARAMETERS <==\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: We will evaluate the program over a series of trials with different combinations of instructions and few-shot examples to find the optimal combination using Bayesian Optimization.\n",
+      "\n",
+      "2025/03/13 12:57:10 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 1 / 28 - Full Evaluation of Default Program ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 75.00 / 103 (72.8%):  37%|███▋      | 103/280 [00:29<00:35,  5.00it/s]"
      ]
     }
    ],
