--- a/reasoning.ipynb
+++ b/reasoning.ipynb
@@ -874,7 +874,257 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 75.00 / 103 (72.8%):  37%|███▋      | 103/280 [00:29<00:35,  5.00it/s]"
+      "Average Metric: 192.00 / 280 (68.6%): 100%|██████████| 280/280 [01:26<00:00,  3.23it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 12:58:36 INFO dspy.evaluate.evaluate: Average Metric: 192 / 280 (68.6%)\n",
+      "2025/03/13 12:58:36 INFO dspy.teleprompt.mipro_optimizer_v2: Default program score: 68.57\n",
+      "\n",
+      "/Users/aidand/dev/hello-dspy/env/lib/python3.10/site-packages/optuna/_experimental.py:31: ExperimentalWarning: Argument ``multivariate`` is an experimental feature. The interface can change in the future.\n",
+      "  warnings.warn(\n",
+      "2025/03/13 12:58:36 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 2 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.00 / 25 (84.0%): 100%|██████████| 25/25 [00:39<00:00,  1.58s/it] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 12:59:16 INFO dspy.evaluate.evaluate: Average Metric: 21 / 25 (84.0%)\n",
+      "2025/03/13 12:59:16 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 84.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 12', 'Predictor 0: Few-Shot Set 7'].\n",
+      "2025/03/13 12:59:16 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0]\n",
+      "2025/03/13 12:59:16 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 12:59:16 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 12:59:16 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 12:59:16 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 3 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.00 / 25 (84.0%): 100%|██████████| 25/25 [00:12<00:00,  1.98it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 12:59:29 INFO dspy.evaluate.evaluate: Average Metric: 21 / 25 (84.0%)\n",
+      "2025/03/13 12:59:29 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 84.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 10', 'Predictor 0: Few-Shot Set 7'].\n",
+      "2025/03/13 12:59:29 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0]\n",
+      "2025/03/13 12:59:29 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 12:59:29 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 12:59:29 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 12:59:29 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 4 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.00 / 25 (84.0%): 100%|██████████| 25/25 [00:15<00:00,  1.62it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 12:59:44 INFO dspy.evaluate.evaluate: Average Metric: 21 / 25 (84.0%)\n",
+      "2025/03/13 12:59:44 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 84.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 7', 'Predictor 0: Few-Shot Set 18'].\n",
+      "2025/03/13 12:59:44 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0]\n",
+      "2025/03/13 12:59:44 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 12:59:44 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 12:59:44 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 12:59:44 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 5 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 22.00 / 25 (88.0%): 100%|██████████| 25/25 [00:10<00:00,  2.41it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 12:59:55 INFO dspy.evaluate.evaluate: Average Metric: 22 / 25 (88.0%)\n",
+      "2025/03/13 12:59:55 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 88.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 15', 'Predictor 0: Few-Shot Set 2'].\n",
+      "2025/03/13 12:59:55 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0]\n",
+      "2025/03/13 12:59:55 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 12:59:55 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 12:59:55 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 12:59:55 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 6 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 25.00 / 25 (100.0%): 100%|██████████| 25/25 [00:10<00:00,  2.43it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:00:05 INFO dspy.evaluate.evaluate: Average Metric: 25 / 25 (100.0%)\n",
+      "2025/03/13 13:00:05 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 100.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 8', 'Predictor 0: Few-Shot Set 18'].\n",
+      "2025/03/13 13:00:05 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0]\n",
+      "2025/03/13 13:00:05 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 13:00:05 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 13:00:05 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:00:05 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 7 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 19.00 / 25 (76.0%): 100%|██████████| 25/25 [00:21<00:00,  1.18it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:00:26 INFO dspy.evaluate.evaluate: Average Metric: 19 / 25 (76.0%)\n",
+      "2025/03/13 13:00:26 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 76.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 7', 'Predictor 0: Few-Shot Set 1'].\n",
+      "2025/03/13 13:00:26 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0]\n",
+      "2025/03/13 13:00:26 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 13:00:26 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 13:00:26 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:00:26 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 8 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 19.00 / 25 (76.0%): 100%|██████████| 25/25 [00:14<00:00,  1.72it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:00:41 INFO dspy.evaluate.evaluate: Average Metric: 19 / 25 (76.0%)\n",
+      "2025/03/13 13:00:41 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 76.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 7', 'Predictor 0: Few-Shot Set 12'].\n",
+      "2025/03/13 13:00:41 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0]\n",
+      "2025/03/13 13:00:41 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 13:00:41 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 13:00:41 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:00:41 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 9 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.00 / 25 (84.0%): 100%|██████████| 25/25 [00:20<00:00,  1.25it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:01:01 INFO dspy.evaluate.evaluate: Average Metric: 21 / 25 (84.0%)\n",
+      "2025/03/13 13:01:01 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 84.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 11', 'Predictor 0: Few-Shot Set 13'].\n",
+      "2025/03/13 13:01:01 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0]\n",
+      "2025/03/13 13:01:01 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 13:01:01 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 13:01:01 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:01:01 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 10 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 24.00 / 25 (96.0%): 100%|██████████| 25/25 [00:15<00:00,  1.59it/s] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:01:17 INFO dspy.evaluate.evaluate: Average Metric: 24 / 25 (96.0%)\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 96.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5', 'Predictor 0: Few-Shot Set 4'].\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [84.0, 84.0, 84.0, 88.0, 100.0, 76.0, 76.0, 84.0, 96.0]\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57]\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.57\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 11 / 28 - Full Evaluation =====\n",
+      "2025/03/13 13:01:17 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 100.0) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 237.00 / 280 (84.6%): 100%|██████████| 280/280 [01:31<00:00,  3.06it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 13:02:49 INFO dspy.evaluate.evaluate: Average Metric: 237 / 280 (84.6%)\n",
+      "2025/03/13 13:02:49 INFO dspy.teleprompt.mipro_optimizer_v2: \u001b[92mNew best full eval score!\u001b[0m Score: 84.64\n",
+      "2025/03/13 13:02:49 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [68.57, 84.64]\n",
+      "2025/03/13 13:02:49 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 84.64\n",
+      "2025/03/13 13:02:49 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 13:02:49 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 13:02:49 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 12 / 28 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 5.00 / 5 (100.0%):  20%|██        | 5/25 [00:04<00:10,  1.89it/s]"
      ]
     }
    ],
